--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,13 @@
 
 .owl-carousel {
   .owl-item {
+    a img {
+      opacity: 1;
+      transition: all 0.7s;
+      &:hover {
+        opacity: .5;
+      }
+    }
     .slider {
       position: absolute !important;
       top: 50%;
@@ -23,21 +30,27 @@
     height: 150px;
     position: absolute;
     width: 100px;
+    opacity: 1;
     cursor: pointer;
-    top: 30% !important;
+    top: 35% !important;
+    transition: all 0.7s;
+    &:hover {
+      opacity: .5;
+    }
   }
+
   .owl-next.disabled, .owl-prev.disabled {
     pointer-events: none;
     opacity: .2;
   }
   .prev-slide {
     background: url(./assets/img/prev-icon.png) no-repeat ;
-    background-size:  100px 200px;
+    background-size:  100px 150px;
     left: 5%;
   }
    .next-slide {
     background: url(./assets/img/next-icon.png) no-repeat ;
-    background-size: 100px 200px;
+    background-size: 100px 150px;
     right: 5%;
   }
 }
