--- a/src/app/entities/home/trang-chu/carousel/carousel.component.scss
+++ b/src/app/entities/home/trang-chu/carousel/carousel.component.scss
@@ -1,3 +1,22 @@
+.my-carousel {
+  position: relative;
+   outline: none;
+   .picsum-img-wrapper{
+     img {
+        width: 100%;
+       height: 500px;
+     }
+   }
+   .carousel-caption {
+     img {
+       position: absolute;
+       bottom: 450%;
+       opacity: 1;
+       transition: all 0.5s;
+     }
+     &:hover {
+       opacity: .7;
+     }
+   }
 
-
-
+  }
