finish list movie and make pagination done

--- a/src/app/entities/home/trang-chu/trang-chu.component.html
+++ b/src/app/entities/home/trang-chu/trang-chu.component.html
@@ -44,6 +44,11 @@
 <ng-container *ngIf="DanhSachPhim">
     <app-carousel [phim]="DanhSachPhim"></app-carousel>
 </ng-container>
+<app-carousel></app-carousel>
+<ng-container *ngIf="DanhSachPhim">
+    <app-danh-sach-phim [DSPhim]="DanhSachPhim"></app-danh-sach-phim>
+</ng-container>
+
 
 
 
