--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -14,7 +14,7 @@
         <a class="nav-link" routerLink="">Trang Chủ</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/lich-chieu">Lịch Chiếu</a>
+        <a class="nav-link" href="#lichchieu">Lịch Chiếu</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/cum-rap">Cụm Rạp</a>
