--- a/src/app/entities/home/trang-chu/carousel/carousel.component.scss
+++ b/src/app/entities/home/trang-chu/carousel/carousel.component.scss
@@ -4,7 +4,7 @@
    .picsum-img-wrapper{
      img {
         width: 100%;
-       height: 500px;
+       height: 600px;
      }
    }
    .carousel-caption {
@@ -21,3 +21,11 @@
 
   }
 
+@media only screen and (min-width: 1200px) {
+  .picsum-img-wrapper{
+    img {
+      width: 100%;
+      height: 800px;
+    }
+  }
+}
